objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Calculation__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Calculation__c</fullName>
    <inlineHelpText>Used to add, subtract, multiply or divide columns.</inlineHelpText>
    <label>Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>