objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Column_Overide_Row__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Column_Overide_Row__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used when a cell has an intersection of both a column and a row with a calculation and your would like to display the column calculation rather than the row.</inlineHelpText>
    <label>Column Override Row</label>
    <type>Checkbox</type>
</CustomField>