objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Financial_Report_Definition__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Financial_Report_Definition__c</fullName>
    <label>Financial Statement Definition</label>
    <referenceTo>AcctSeed__Financial_Report_Definition__c</referenceTo>
    <relationshipLabel>Financial Statement Columns</relationshipLabel>
    <relationshipName>Financial_Report_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>