objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Header_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Header_1__c</fullName>
    <inlineHelpText>Used to show your own custom text when this option is selected in Header Value 1.</inlineHelpText>
    <label>Header 1 Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>