objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Header_1_Value__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Header_1_Value__c</fullName>
    <inlineHelpText>Shows the period name or your own custom text.</inlineHelpText>
    <label>Header 1 Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Period Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>