objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Header_2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Header_2__c</fullName>
    <inlineHelpText>Used to show your own custom text when this option is selected in Header Value 2.</inlineHelpText>
    <label>Header 2 Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>