objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Header_2_Value__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Header_2_Value__c</fullName>
    <inlineHelpText>Shows the period name or your own custom text below Header 1.</inlineHelpText>
    <label>Header 2 Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Period Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>