objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Offset__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Used when running comparative periods in a single report. Number of periods before or after period selected when running the report. Zero is the period selected. A negative value will show periods before, a positive value will show periods after.</inlineHelpText>
    <label>Offset</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>