objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Position__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Position__c</fullName>
    <inlineHelpText>The position of the column from left to right.</inlineHelpText>
    <label>Position</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>