objects/AcctSeed__Financial_Report_Column__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <inlineHelpText>The value to display in the column.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Period</fullName>
                <default>true</default>
                <label>Current Period</label>
            </value>
            <value>
                <fullName>Year To Date</fullName>
            </value>
            <value>
                <fullName>Calculation Number</fullName>
            </value>
            <value>
                <fullName>Calculation Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>